--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -38,47 +38,42 @@ jobs:
       - name: Build for linux         
         run: |
           env GOOS=linux GOARCH=amd64 npm run build:backend 
-          mkdir ./WikiBreeze-linux
-          cp -r ./Wikibreeze ./WikiBreeze-linux
-          rm ./Wikibreeze/WikiBreeze
-          cd ./WikiBreeze-linux
-          zip -r WikiBreeze-linux-${{ steps.get-latest-tag.outputs.tag }}.zip Wikibreeze         
+          mkdir ./WikiBreeze-linux-${{ steps.get-latest-tag.outputs.tag }}
+          cp -r ./Wikibreeze ./WikiBreeze-linux-${{ steps.get-latest-tag.outputs.tag }}
+          rm ./Wikibreeze/WikiBreeze        
         
       - name: Build for macos         
         run: |
           env GOOS=darwin GOARCH=amd64 npm run build:backend
-          mkdir ./WikiBreeze-macos
-          cp -r ./Wikibreeze ./WikiBreeze-macos
+          mkdir ./WikiBreeze-macos-${{ steps.get-latest-tag.outputs.tag }}
+          cp -r ./Wikibreeze ./WikiBreeze-macos-${{ steps.get-latest-tag.outputs.tag }}
           rm ./Wikibreeze/WikiBreeze
-          cd ./WikiBreeze-macos
-          zip -r WikiBreeze-macos-${{ steps.get-latest-tag.outputs.tag }}.zip Wikibreeze
         
       - name: Build for Windows         
         run: |
           env GOOS=windows GOARCH=amd64 npm run build:backend
-          mkdir ./WikiBreeze-windows
-          cp -r ./Wikibreeze ./WikiBreeze-windows
+          mkdir ./WikiBreeze-windows-${{ steps.get-latest-tag.outputs.tag }}
+          cp -r ./Wikibreeze ./WikiBreeze-windows-${{ steps.get-latest-tag.outputs.tag }}
           rm ./Wikibreeze/WikiBreeze.exe
-          cd ./WikiBreeze-windows
-          zip -r WikiBreeze-windows-${{ steps.get-latest-tag.outputs.tag }}.zip Wikibreeze
         
       - name: Upload Linux zip
         uses: actions/upload-artifact@v2 
         with:
-          name: WikiBreeze-linux-${{ steps.get-latest-tag.outputs.tag }}.zip
-          path: ./WikiBreeze-linux/WikiBreeze-linux-${{ steps.get-latest-tag.outputs.tag }}.zip  
+          name: WikiBreeze-linux-${{ steps.get-latest-tag.outputs.tag }}
+          path: ./WikiBreeze-linux-${{ steps.get-latest-tag.outputs.tag }}  
 
       - name: Upload MacOS zip  
         uses: actions/upload-artifact@v2 
         with:
-          name: WikiBreeze-macos-${{ steps.get-latest-tag.outputs.tag }}.zip
-          path: ./WikiBreeze-linux/WikiBreeze-linux-${{ steps.get-latest-tag.outputs.tag }}.zip 
+          name: WikiBreeze-macos-${{ steps.get-latest-tag.outputs.tag }}
+          path: ./WikiBreeze-macos-${{ steps.get-latest-tag.outputs.tag }}  
 
       - name: Upload Windows zip
         uses: actions/upload-artifact@v2    
         with:
-          name: WikiBreeze-windows-${{ steps.get-latest-tag.outputs.tag }}.zip
-          path: ./WikiBreeze-linux/WikiBreeze-linux-${{ steps.get-latest-tag.outputs.tag }}.zip
+          name: WikiBreeze-windows-${{ steps.get-latest-tag.outputs.tag }}
+          path: ./WikiBreeze-windows-${{ steps.get-latest-tag.outputs.tag }}  
+
 
             
           
