--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,11 +12,15 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@babel/types": "^7.22.5",
     "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@tiptap/core": "^2.0.3",
     "@tiptap/extension-bold": "^2.0.3",
     "@tiptap/extension-bullet-list": "^2.0.3",
     "@tiptap/extension-code": "^2.0.3",
     "@tiptap/extension-code-block-lowlight": "^2.0.3",
+    "@tiptap/extension-document": "^2.0.3",
+    "@tiptap/extension-gapcursor": "^2.0.3",
     "@tiptap/extension-hard-break": "^2.0.3",
     "@tiptap/extension-heading": "^2.0.3",
     "@tiptap/extension-history": "^2.0.3",
@@ -24,6 +28,7 @@
     "@tiptap/extension-italic": "^2.0.3",
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-list-item": "^2.0.3",
+    "@tiptap/extension-paragraph": "^2.0.3",
     "@tiptap/extension-strike": "^2.0.3",
     "@tiptap/extension-subscript": "^2.0.3",
     "@tiptap/extension-superscript": "^2.0.3",
@@ -31,6 +36,7 @@
     "@tiptap/extension-table-cell": "^2.0.3",
     "@tiptap/extension-table-header": "^2.0.3",
     "@tiptap/extension-table-row": "^2.0.3",
+    "@tiptap/extension-text": "^2.0.3",
     "@tiptap/extension-text-align": "^2.0.3",
     "@tiptap/extension-underline": "^2.0.3",
     "@tiptap/html": "^2.0.3",
@@ -38,6 +44,7 @@
     "@tiptap/vue-3": "^2.0.3",
     "@vueuse/core": "^10.1.2",
     "bulma": "^0.9.4",
+    "highlight.js": "^11.8.0",
     "lowlight": "^2.9.0",
     "sass": "^1.62.1",
     "vue": "^3.2.47",
