--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wikibreeze",
-  "version": "0.9.1",
+  "version": "0.9.2-alpha",
   "private": true,
   "scripts": {
     "dev": "vite",
