--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wikibreeze",
-    "version": "0.9.1",
+    "version": "0.9.2-alpha",
     "scripts": {
         "prepare": "node -v",
         "build": "rimraf ./Wikibreeze && npm run build:backend && npm run build:frontend",
