move account data to a sigle file

--- a/BackEnd/src/config.json
+++ b/BackEnd/src/config.json
@@ -12,9 +12,5 @@
 	"fileType":[".html",".vue"],
 
 	// Uploads image
-	"uploadImage": true,
-	"account": {
-		"username": "username",
-		"password": "password"
-	}
+	"uploadImage": true
 }
