--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wikibreeze",
-  "version": "1.0.0",
+  "version": "v1.1.0-beta",
   "private": true,
   "scripts": {
     "dev": "vite",
