--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,7 +9,7 @@
     "test:unit": "vitest --environment jsdom --root src/",
     "build-only": "vite build  --outDir ../Wikibreeze",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path"
   },
   "dependencies": {
     "@babel/types": "^7.22.5",
@@ -64,7 +64,6 @@
     "eslint": "^8.44.0",
     "eslint-plugin-vue": "^9.15.1",
     "jsdom": "^22.1.0",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "typescript": "~5.1.6",
     "vite": "^4.3.9",
