--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -64,6 +64,7 @@
     "eslint": "^8.44.0",
     "eslint-plugin-vue": "^9.15.1",
     "jsdom": "^22.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "typescript": "~5.1.6",
     "vite": "^4.3.9",
