--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -47,6 +47,7 @@
     "bulma": "^0.9.4",
     "highlight.js": "^11.8.0",
     "lowlight": "^2.9.0",
+    "pinia": "^2.1.4",
     "sass": "^1.63.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
