Fix custom html attribute not displaying properly and fix some bugs

--- a/BackEnd/src/editorConfig.json
+++ b/BackEnd/src/editorConfig.json
@@ -2,30 +2,17 @@
 // It is not intended for manual editing
 // Edit WikibreezeData/config/editorConfig.json instead
 {
-    "paragraph": {
+    "image": {
         "HTMLAttributes": {
-            // "class": {
-            //     "default": "table"
-            // }
+            "class":"image"
         },
         "tag": "p"
-    },
-    "table" : {
-        "HTMLAttributes": {
-            // "class": {
-            //     "default": "table"
-            // },
-            // ":tablenote": {
-            //     "default": "table"
-            // }
-        },
-        "tag": "table"
     },
     "otherConfigurations":{
         "headingLevels": [1,2,3,4],
         "citation": "false",
-        "tablePro": "true",             //table with note
-        "tableMustContainNote": "false",  //table must contain note
+        "tablePro": "true",                 //table with note
+        "tableMustContainNote": "false",    //table must contain note
         "imagePro": "true",                 //table with note
         "imageMustContainNote": "false"     //table must contain note 
     }
