--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "mkdirp": "^3.0.1",
         "ncp": "^2.0.0",
         "rimraf": "^5.0.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20.4.2"
     }
 }
