--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -8,7 +8,7 @@ on:
       - '**/README.md'
       - '**/README_zh.md'
 env:
-  TAG: v1.1.0-beta
+  TAG: v1.1.0-beta.2
 jobs:
   build:
     runs-on: ubuntu-latest
