--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -45,6 +45,7 @@
     "@tiptap/vue-3": "^2.0.3",
     "@vueuse/core": "^10.2.1",
     "bulma": "^0.9.4",
+    "crypto-js": "^4.1.1",
     "highlight.js": "^11.8.0",
     "lowlight": "^2.9.0",
     "pinia": "^2.1.4",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^20.3.3",
     "@vitejs/plugin-vue": "^4.2.3",
