update editorConfig.json, ImagePro.ts and Tiptap.vue

--- a/BackEnd/src/editorConfig.json
+++ b/BackEnd/src/editorConfig.json
@@ -4,7 +4,7 @@
 {
     "image": {
         "HTMLAttributes": {
-            "class":"image"
+            "alt":"WikiBreeze Image"
         },
         "tag": "img"
     },
