--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wikibreeze",
-  "version": "v1.1.0",
+  "version": "v1.1.1-beta.1",
   "private": true,
   "type": "module",
   "scripts": {
