--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wikibreeze",
-    "version": "v1.1.0",
+    "version": "v1.1.1-beta.1",
     "type": "module",
     "scripts": {
         "prepare": "node -v",
